--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "autoprefixer": "^10.4.7",
     "commitizen": "^4.2.4",
     "core-js": "^3.22.5",
-    "dotenv": "^10.0.0",
+    "dotenv": "^16.4.5",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-define-config": "1.0.9",
@@ -122,8 +122,7 @@
     "typescript"
   ],
   "license": "MIT",
-  "bugs": {
-  },
+  "bugs": {},
   "engines": {
     "node": "^12 || >=14"
   }
